--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,7 @@ discord.py==2.3.2
 frozenlist==1.4.1
 idna==3.6
 multidict==6.0.5
-yarl==1.9.4
 py-cord==2.5.0
+python-dotenv==1.0.1
+typing_extensions==4.10.0
+yarl==1.9.4
